upgrades html, body, and #app CSS to eliminate a layout issue

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -41,9 +41,15 @@
     src: url('/AROLY.ttf');
 }
 
-html, body, #app {
-    height: 100%;
+html {}
+
+body {
+    min-height: 100%;
 }
+#app {
+    // height: 100%;
+}
+
 
 // brand
 .adam-logo {
